fix the top spacing

--- a/src/search/index.css
+++ b/src/search/index.css
@@ -1,3 +1,6 @@
+.container {
+  margin-top: 25px;
+}
 .recipeBlock {
   max-width: 350px;
   display: flex;
